fix: update z-index considering sticky tabs

--- a/frappe/public/scss/desk/page.scss
+++ b/frappe/public/scss/desk/page.scss
@@ -84,7 +84,7 @@
 }
 
 .page-head {
-	z-index: 5;
+	z-index: 6;
 	position: sticky;
 	top: var(--navbar-height);
 	background: var(--bg-color);
